post indexing test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <div class="home">
 
-<!--   <ul class="posts">
+  <ul class="posts">
     {% for post in paginator.posts %}
     <li>
       <h1 >{{ post.title }}</h1>
@@ -34,6 +34,6 @@ title: Home
     {% else %}
       <span class="page-link">nxt</span>
     {% endif %}
-  </div> -->
+  </div>
 
 </div>
