--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: Home
 ---
 
 <div class="home">
-
+<a title="Under the Surface" href="/images/covers/under-the-surface.jpg" target="_blank"><img src="/images/covers/thumbnail/under-the-surface.jpg" alt="Under the Surface" width="30%" /></a>
+<a title="The Chase" href="/images/covers/the-chase.jpg" target="_blank"><img src="/images/covers/thumbnail/the-chase.jpg" alt="The Chase" width="30%" /></a>
+<a title="Spark" href="/images/covers/spark.jpg" target="_blank"><img src="/images/covers/thumbnail/spark.jpg" alt="Spark" width="30%" /></a>
 <!--   <ul class="posts">
     {% for post in paginator.posts %}
     <li>
