--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 
 <div class="home">
+<h1 style="text-align:center; margin-bottom:50px"><a href="/when-the-morning-comes/I-Dont-Want-To-Talk-about-It.html">2014 New single: I Don't Want To Talk about It</a></h1>
 <a title="Under the Surface" href="/under-the-surface/"><img src="/images/covers/thumbnail/under-the-surface.jpg" alt="Under the Surface" width="30%" /></a>
 <a title="The Chase" href="/the-chase/"><img src="/images/covers/thumbnail/the-chase.jpg" alt="The Chase" width="30%" /></a>
 <a title="Spark" href="/spark/"><img src="/images/covers/thumbnail/spark.jpg" alt="Spark" width="30%" /></a>
